Modified models for a single file, post working
