# controllers/pet_controller.py
@@ -1,6 +1,5 @@
 import connexion
-from swagger_server.models.api_response import ApiResponse
-from swagger_server.models.pet import Pet
+from swagger_server.models import Pet
 from datetime import date, datetime
 from typing import List, Dict
 from six import iteritems
@@ -10,7 +9,7 @@ from swagger_server.database import db_session as ses
 def add_pet(body):
     """
     Add a new pet to the store
-    
+
     :param body: Pet object that needs to be added to the store
     :type body: dict | bytes
 
@@ -30,10 +29,10 @@ def add_pet(body):
 def delete_pet(petId, api_key=None):
     """
     Deletes a pet
-    
+
     :param petId: Pet id to delete
     :type petId: int
-    :param api_key: 
+    :param api_key:
     :type api_key: str
 
     :rtype: None
@@ -50,23 +49,6 @@ def find_pets_by_status(status):
 
     :rtype: List[Pet]
     """
-    results = list()
-
-    for _status in status:
-        results += ses.query(Pet).filter_by(_status=_status).all()
-
-    return results
-
-
-def find_pets_by_tags(tags):
-    """
-    Finds Pets by tags
-    Muliple tags can be provided with comma separated strings. Use         tag1, tag2, tag3 for testing.
-    :param tags: Tags to filter by
-    :type tags: List[str]
-
-    :rtype: List[Pet]
-    """
     return 'do some magic!'
 
 
@@ -79,15 +61,13 @@ def get_pet_by_id(petId):
 
     :rtype: Pet
     """
-    result = ses.query(Pet).get(petId)
-    print(result.to_str())
-    return result
+    return ses.query(Pet).get(petId)
 
 
 def update_pet(body):
     """
     Update an existing pet
-    
+
     :param body: Pet object that needs to be added to the store
     :type body: dict | bytes
 
@@ -101,7 +81,7 @@ def update_pet(body):
 def update_pet_with_form(petId, name=None, status=None):
     """
     Updates a pet in the store with form data
-    
+
     :param petId: ID of pet that needs to be updated
     :type petId: int
     :param name: Updated name of the pet
@@ -110,21 +90,5 @@ def update_pet_with_form(petId, name=None, status=None):
     :type status: str
 
     :rtype: None
-    """
-    return 'do some magic!'
-
-
-def upload_file(petId, additionalMetadata=None, file=None):
-    """
-    uploads an image
-    
-    :param petId: ID of pet to update
-    :type petId: int
-    :param additionalMetadata: Additional data to pass to server
-    :type additionalMetadata: str
-    :param file: file to upload
-    :type file: werkzeug.datastructures.FileStorage
-
-    :rtype: ApiResponse
     """
     return 'do some magic!'
